--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,65 +1,61 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-	<meta charset="utf-8">
-	<title>OAuth Passport</title>
-	<style>
-		body {
-			font-family: arial;
-			margin: 0;
-		}
-
-		nav {
-			background: #ff5353;
-			padding: 20px 10px;
-		}
-
-		nav ul {
-			max-width: 960px;
-			margin: 0 auto;
-			padding: 0;
-		}
-
-		nav li {
-			list-style-type: none;
-			display: inline-block;
-			margin: 0 10px 0 0;
-		}
-
-		nav a {
-			color: #fff;
-			font-size: 18px;
-			background: rgba(255, 255, 255, 0.2);
-			text-decoration: none;
-			padding: 10px;
-			display: block;
-		}
-
-		main,
-		header {
-			max-width: 960px;
-			margin: 30px auto;
-			padding: 0 10px;
-			color: #333;
-		}
-
-	</style>
-</head>
-
-<body>
-	<nav>
-		<ul>
-			<li><a href="/">Homepage</a></li>
-		</ul>
-	</nav>
-	<header>
-		<h1>OAuth Passport</h1>
-		<h2>Homepage</h2>
-	</header>
-	<main>
-		<p>Made OAuth Passport</p>
-	</main>
-</body>
-
+    <head>
+        <meta charset="utf-8">
+        <title>OAuth Demo</title>
+        <style>
+            body{
+                font-family: arial;
+                margin: 0;
+            }
+            nav{
+                background: #ff5353;
+                padding: 20px 10px;
+            }
+            nav ul{
+                max-width: 960px;
+                margin: 0 auto;
+                padding: 0;
+            }
+            nav li{
+                list-style-type: none;
+                display: inline-block;
+                margin: 0 10px 0 0;
+            }
+            nav a{
+                color: #fff;
+                font-size: 18px;
+                background: rgba(255,255,255,0.2);
+                text-decoration: none;
+                padding: 10px;
+                display: block;
+            }
+            main, header{
+                max-width: 960px;
+                margin: 30px auto;
+                padding: 0 10px;
+                color: #333;
+            }
+        </style>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <% if (user) { %>
+                <li><a href="/auth/logout">Log out</a></li>
+                <% } else { %>
+                <li><a href="/auth/login">Login</a></li>
+                <% } %>
+                <li><a href="/">Homepage</a></li>
+                <li><a href="/profile">Profile</a></li>
+            </ul>
+        </nav>
+        <header>
+            <h1>OAuth Demo</h1>
+            <h2>Homepage</h2>
+        </header>
+        <main>
+            <p>OAuth with Passport (google+)</p>
+        </main>
+    </body>
 </html>
